feat: provided a modal when the game over

--- a/css/style.css
+++ b/css/style.css
@@ -17,3 +17,28 @@ td {
 .hide {
     display: none;
 }
+
+/*MODAL END THE GAME*/
+.modal_game {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.5);
+}
+
+.modal_game_content {
+    display: block;
+    width: 70%;
+    max-width: 90%;
+    margin: 5% auto 0 auto;
+    background: #fff;
+    border-radius: 5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    position: relative;
+    padding: 30px;
+    min-height: 200px;
+}
+
