--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,34 @@
 body {
-    background-color: rgba(38, 102, 145, 0.87);
+    background-color: #ccc;
     text-align: center;
 }
 
 table {
     margin: 0 auto;
     width: 50%;
+    background-color: rgba(38, 102, 145, 0.87);
 }
 
 table, tr, td {
     border: 1px;
-    border-style: solid;
+    border-style: hidden;
     border-spacing: 20px;
 }
 
 td {
     margin: 30px;
-    padding: 20px;
+
     cursor: pointer;
+}
+
+td.card {
+    background-color: orange;
+    padding: 32px 31px;
+}
+
+td.card_hided {
+    background-color: orangered;
+    padding: 35px 37px;
 }
 
 .hide {
