fix: doing to work in other brownsers - offsetParent.offsetParent ->  offsetParent.parentElement

--- a/css/style.css
+++ b/css/style.css
@@ -74,18 +74,22 @@ td {
     cursor: pointer;
 }
 
-/*ANIMATION FLIP CARDS*/
+/*ANIMATION FLIP CARDS
+    Part of the code from 
+    url:https://codepen.io/Eklipse/pen/RNGXNz
+    author: Fernando Zorrilla
+*/
 
 .flip-container {
-    -webkit-perspective: 1000;
     -moz-perspective: 1000;
+    -webkit-perspective: 1000;
     -o-perspective: 1000;
     perspective: 1000;
 }
 
 .flip-container.hover .flipper {
-    -webkit-transform: rotateY(180deg);
     -moz-transform: rotateY(180deg);
+    -webkit-transform: rotateY(180deg);
     -o-transform: rotateY(180deg);
     transform: rotateY(180deg);
 }
@@ -99,10 +103,10 @@ td {
 }
 
 .flipper {
-    -webkit-transition: 0.5s;
-    -webkit-transform-style: preserve-3d;
     -moz-transition: 0.5s;
     -moz-transform-style: preserve-3d;
+    -webkit-transition: 0.5s;
+    -webkit-transform-style: preserve-3d;
     -o-transition: 0.5s;
     -o-transform-style: preserve-3d;
     transition: 0.5s;
@@ -111,8 +115,8 @@ td {
 }
 
 .card_hided, .card {
-	-webkit-backface-visibility: hidden;
 	-moz-backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
   -o-backface-visibility: hidden;
 	backface-visibility: hidden;
 
@@ -122,8 +126,8 @@ td {
 }
 
 .card {
-    -webkit-transform: rotateY(180deg);
     -moz-transform: rotateY(180deg);
+    -webkit-transform: rotateY(180deg);
     -o-transform: rotateY(180deg);
     transform: rotateY(180deg);
 }
