--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ table {
     /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     border-radius: 2px;
+    width: 45%;
 }
 
 table,
